--- a/src/App.css
+++ b/src/App.css
@@ -1,48 +1,32 @@
-.App {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
+.navbar {
+  background-color: #4caf50;
 }
 
-input {
-  margin-bottom: 10px;
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 16px;
-}
-
-button {
-  padding: 10px 20px;
-  background-color: #4CAF50;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 16px;
-}
-
-h1 {
-  font-size: 24px;
-  color: #333;
-  margin-bottom: 20px;
-}
-
-ul {
+.navbar ul {
   list-style-type: none;
+  margin: 0;
   padding: 0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
 }
 
-li.message {
-  margin-bottom: 10px;
-  padding: 8px;
-  background-color: #d1efd2;
-  border-radius: 4px;
-  text-align: center;
-  width: 80%;
+.navbar li {
+  margin-right: 20px;
+  display: inline;
+  padding: 10px;
+}
+.navbar li:hover {
+  margin-right: 20px;
+  background-color: #146017;
+}
+
+.navbar li a {
+  display: block;
+  color: #fff;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+.navbar li a:hover {
+  text-decoration: underline;
 }
